feat(auth): Добавлена аутентификация Telegram
